k8s-do/ldwizard-erfgoedwizard/ldwizard-erfgoedwizard-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ldwizard-erfgoedwizard
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ldwizard-erfgoedwizard
  template:
    metadata:
      labels:
        app: ldwizard-erfgoedwizard
    spec:
      containers:
        - name: ldwizard-erfgoedwizard
          image: ghcr.io/netwerk-digitaal-erfgoed/ldwizard-erfgoedwizard
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: ghcr
