k8s-do/ldwizard-erfgoedwizard/ldwizard-erfgoedwizard-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ldwizard-erfgoedwizard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ldwizard.netwerkdigitaalerfgoed.nl
      secretName: ldwizard-tls
  rules:
    - host: ldwizard.netwerkdigitaalerfgoed.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ldwizard-erfgoedwizard
                port:
                  number: 80
